--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,4 +2,4 @@ include:
   - template: AWS/Deploy-ECS.gitlab-ci.yml
 
 before_script:
-  - apk add --update --no-cache git
+  - sudo apt-get install git
