--- a/requirements.txt
+++ b/requirements.txt
@@ -4,56 +4,113 @@ APScheduler==3.10.4
 asyncio==3.4.3
 attrs==23.1.0
 beautifulsoup4==4.12.2
-blinker==1.7.0
+blinker==1.6.2
+blis==0.7.11
 Brotli==1.1.0
+browsermob-proxy==0.8.0
 bs4==0.0.1
+catalogue==2.0.10
 certifi==2023.7.22
-cffi==1.16.0
-charset-normalizer==3.3.2
+cffi==1.15.1
+charset-normalizer==3.3.0
 click==8.1.7
-cryptography==41.0.5
-datadispatch==1.0.0
-dnspython==2.4.2
+cloudpathlib==0.16.0
+confection==0.1.4
+contourpy==1.1.1
+cryptography==41.0.4
+cycler==0.12.1
+cymem==2.0.8
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 et-xmlfile==1.1.0
-fastapi==0.104.0
+exceptiongroup==1.1.3
+fastapi==0.103.2
+filelock==3.12.4
+fonttools==4.43.1
+fsspec==2023.9.2
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
+httptools==0.6.0
+huggingface-hub==0.17.3
 hyperframe==6.0.1
 idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.3.2
 kaitaistruct==0.10
-loguru==0.7.2
+kiwisolver==1.4.5
+langcodes==3.3.0
+MarkupSafe==2.1.3
+matplotlib==3.8.0
+mpmath==1.3.0
+murmurhash==1.0.10
+networkx==3.1
+nltk==3.8.1
 numpy==1.26.1
 openpyxl==3.1.2
-outcome==1.3.0.post0
+outcome==1.2.0
 packaging==23.2
-pandas==2.1.2
+pandas==2.1.1
+Pillow==10.1.0
+preshed==3.0.9
+prompt-toolkit==3.0.39
 pyasn1==0.5.0
 pycparser==2.21
 pydantic==2.4.2
 pydantic_core==2.10.1
-pymongo==4.5.0
-pyOpenSSL==23.3.0
+Pygments==2.16.1
+pyOpenSSL==23.2.0
 pyparsing==3.1.1
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
+PyYAML==6.0.1
+radian==0.6.7
+rchitect==0.4.2
+regex==2023.10.3
 requests==2.31.0
-selenium==4.15.2
+safetensors==0.4.0
+scikit-learn==1.4.0
+scipy==1.11.3
+seaborn==0.13.0
+selenium==4.13.0
 selenium-wire==5.1.0
+sentencepiece==0.1.99
 six==1.16.0
+smart-open==6.4.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.5
+spacy==3.7.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
 starlette==0.27.0
-trio==0.23.1
-trio-websocket==0.11.1
+sympy==1.12
+thinc==8.2.2
+threadpoolctl==3.2.0
+tk==0.1.0
+tokenizers==0.14.1
+torch==2.1.0
+torchvision==0.16.0
+tqdm==4.66.1
+transformers==4.34.0
+trio==0.22.2
+trio-websocket==0.10.4
+typer==0.9.0
 typing_extensions==4.8.0
 tzdata==2023.3
 tzlocal==5.2
 urllib3==2.0.7
 uvicorn==0.23.2
-webdriver-manager==4.0.1
+uvloop==0.17.0
+wasabi==1.1.2
+watchfiles==0.20.0
+wcwidth==0.2.6
+weasel==0.3.4
+websockets==11.0.3
+Werkzeug==3.0.0
 wsproto==1.2.0
-zstandard==0.22.0
+XlsxWriter==3.1.5
+zstandard==0.21.0
