--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ contourpy==1.1.1
 cryptography==41.0.4
 cycler==0.12.1
 cymem==2.0.8
+dnspython==2.6.1
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 et-xmlfile==1.1.0
 exceptiongroup==1.1.3
@@ -59,6 +60,7 @@ pycparser==2.21
 pydantic==2.4.2
 pydantic_core==2.10.1
 Pygments==2.16.1
+pymongo==4.6.2
 pyOpenSSL==23.2.0
 pyparsing==3.1.1
 PySocks==1.7.1
