--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
 before_script:
-  - echo "$HKU_USERNAME" > ".env"
-  - echo "$HKU_PASSWORD" > ".env"
-  - echo "$MONGODB_USERNAME" > ".env"
-  - echo "$MONGODB_PASSWORD" > ".env"
-  - echo "$MONGODB_URI" > ".env"
-  - echo "$DB" > ".env"
+  - ecoh "" > "".env"
+  - echo "HKU_USERNAME=$HKU_USERNAME" >> ".env"
+  - echo "HKU_PASSWORD=$HKU_PASSWORD" >> ".env"
+  - echo "MONGODB_USERNAME=$MONGODB_USERNAME" >> ".env"
+  - echo "MONGODB_PASSWORD=$MONGODB_PASSWORD" >> ".env"
+  - echo "MONGODB_URI=$MONGODB_URI" >> ".env"
+  - echo "DB=$DB" >> ".env"
   - cat ".env"
 
 include:
