--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,13 @@
 before_script:
-  - echo "" > ".env"
-  - echo "HKU_USERNAME=$HKU_USERNAME" >> ".env"
-  - echo "HKU_PASSWORD=$HKU_PASSWORD" >> ".env"
-  - echo "MONGODB_USERNAME=$MONGODB_USERNAME" >> ".env"
-  - echo "MONGODB_PASSWORD=$MONGODB_PASSWORD" >> ".env"
-  - echo "MONGODB_URI=$MONGODB_URI" >> ".env"
-  - echo "DB=$DB" >> ".env"
-  - cat ".env"
+  # - echo "" > ".env"
+  # - echo "HKU_USERNAME=$HKU_USERNAME" >> ".env"
+  # - echo "HKU_PASSWORD=$HKU_PASSWORD" >> ".env"
+  # - echo "MONGODB_USERNAME=$MONGODB_USERNAME" >> ".env"
+  # - echo "MONGODB_PASSWORD=$MONGODB_PASSWORD" >> ".env"
+  # - echo "MONGODB_URI=$MONGODB_URI" >> ".env"
+  # - echo "DB=$DB" >> ".env"
+  - echo '$ENV' > '.env'
+  - cat '.env'
 
 include:
   - template: AWS/Deploy-ECS.gitlab-ci.yml
