--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ before_script:
   # - echo "MONGODB_PASSWORD=$MONGODB_PASSWORD" >> ".env"
   # - echo "MONGODB_URI=$MONGODB_URI" >> ".env"
   # - echo "DB=$DB" >> ".env"
-  - echo '$ENV' > '.env'
+  - echo "$ENV" > ".env"
   - cat '.env'
 
 include:
