--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ joblib==1.3.2
 kaitaistruct==0.10
 kiwisolver==1.4.5
 langcodes==3.3.0
+loguru==0.7.2
 MarkupSafe==2.1.3
 matplotlib==3.8.0
 mpmath==1.3.0
@@ -111,6 +112,7 @@ wasabi==1.1.2
 watchfiles==0.20.0
 wcwidth==0.2.6
 weasel==0.3.4
+webdriver-manager==4.0.1
 websockets==11.0.3
 Werkzeug==3.0.0
 wsproto==1.2.0
