Added alot of stuff

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,5 @@ HKU_PASSWORD=
 HKU_USERNAME=
 MONGODB_URI=mongodb+srv://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@primary.uplwhwj.mongodb.net/?retryWrites=true&w=majority&appName=Primary
 DB=test
+DOC_USERNAME=
+DOC_PASSWORD=
