a lot of change, everything except post requests

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@ MONGODB_URI=mongodb+srv://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@primary.uplwhw
 DB=test
 DOC_USERNAME=
 DOC_PASSWORD=
+UTILS_ENDPOINTS_PASSWORD=
