--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ Pygments==2.16.1
 pymongo==4.6.2
 pyOpenSSL==23.2.0
 pyparsing==3.1.1
+PyPDF2==3.0.1
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
