--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ click==8.1.7
 cloudpathlib==0.16.0
 confection==0.1.4
 contourpy==1.1.1
+crypto==1.4.1
 cryptography==41.0.4
 cycler==0.12.1
 cymem==2.0.8
@@ -46,6 +47,7 @@ MarkupSafe==2.1.3
 matplotlib==3.8.0
 mpmath==1.3.0
 murmurhash==1.0.10
+Naked==0.1.32
 networkx==3.1
 nltk==3.8.1
 numpy==1.26.1
@@ -58,6 +60,7 @@ preshed==3.0.9
 prompt-toolkit==3.0.39
 pyasn1==0.5.0
 pycparser==2.21
+pycryptodome==3.20.0
 pydantic==2.4.2
 pydantic_core==2.10.1
 Pygments==2.16.1
@@ -68,6 +71,7 @@ PyPDF2==3.0.1
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-multipart==0.0.9
 pytz==2023.3.post1
 PyYAML==6.0.1
 radian==0.6.7
@@ -81,6 +85,7 @@ seaborn==0.13.0
 selenium==4.13.0
 selenium-wire==5.1.0
 sentencepiece==0.1.99
+shellescape==3.8.1
 six==1.16.0
 smart-open==6.4.0
 sniffio==1.3.0
