--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "scripts": {
-    "dev" : "python3 setup.py && uvicorn app.main:app --reload"
+    "dev": "py setup.py && uvicorn app.main:app --reload"
+  },
+  "name": "backend-data-cluster",
+  "version": "1.0.0",
+  "description": "Welcome! This the git repository for the backend our FYP, HKUCompass",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "nodemon": "^3.1.4"
   }
 }
