--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,4 @@
-HKU_PASSWORD=
-HKU_USERNAME=
-MONGODB_URI=mongodb+srv://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@primary.uplwhwj.mongodb.net/?retryWrites=true&w=majority&appName=Primary
-DB=test
-DOC_USERNAME=
-DOC_PASSWORD=
-UTILS_ENDPOINTS_PASSWORD=
+HKU_PASSWORD= #hku password
+HKU_USERNAME= #hku username
+MONGODB_URI= #connection string for mongodb database
+DB= #database name
