--- a/.env
+++ b/.env
@@ -2,4 +2,7 @@ HKU_PASSWORD="Navyblue1610"
 HKU_USERNAME="u3596237"
 MONGODB_URI="mongodb+srv://ishraqafzal:hkucompass@test.fg8cibo.mongodb.net/?retryWrites=true&w=majority&appName=test"
 db = "test"
+DOC_USERNAME="ishraq"
+DOC_PASSWORD="MBZ0Iu0cnk50gdbo"
+
 
