--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
-HKU_PASSWORD= #hku password
-HKU_USERNAME= #hku username
-MONGODB_URI= #connection string for mongodb database
-DB= #database name
+HKU_PASSWORD=
+HKU_USERNAME=
+MONGODB_URI=
+DOC_USERNAME=
+DOC_PASSWORD=
