some changes :wwq

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 HKU_PASSWORD="Navyblue1610"
 HKU_USERNAME="u3596237"
-MONGODB_URI="mongodb+srv://ishraqafzal:hkucompass@test.fg8cibo.mongodb.net/?retryWrites=true&w=majority&appName=test"
-db = "test"
-DOC_USERNAME="ishraq"
-DOC_PASSWORD="MBZ0Iu0cnk50gdbo"
+MONGODB_URI="mongodb+srv://hkucompassadmin:testingpw122!@cosmon-icdev-hkucompass.mongocluster.cosmos.azure.com/?tls=true&authMechanism=SCRAM-SHA-256&retrywrites=false&maxIdleTimeMS=120000"
+db = "hkucompassdb"
+DOC_USERNAME="u3596237@connect.hku.hk"
+DOC_PASSWORD="Navyblue1610"
 
 
